--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,13 +1,13 @@
 # Authors
 
 Billy Rick:
-  name        : "Billy Rick"
-  bio         : "What do you want, jewels? I am a very extravagant man."
-  avatar      : "/assets/images/bio-photo-2.jpg"
+  name        : "Taeyong Kang"
+  bio         : "Interest for MSA/React/Flutter ..."
+  avatar      : "/assets/images/bio_photo.jpg"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:billyrick@rick.com"
+      url: "mailto:ddaeyongee@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://thewhip.com"
@@ -18,7 +18,7 @@ Billy Rick:
 Cornelius Fiddlebone:
   name        : "Cornelius Fiddlebone"
   bio         : "I ordered what?"
-  avatar      : "/assets/images/bio-photo.jpg"
+  avatar      : "/assets/images/bio_photo.jpg"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
