--- a/_config.yml
+++ b/_config.yml
@@ -25,18 +25,20 @@ masthead_title           : # overrides the website title displayed in the masthe
 #breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
 date_format              : "%Y-%m-%d, %H:%M"
-paginate                 : 5
-paginate_path            : /page/:num/
-# pagination               :
-#   enabled                : true
-#   per_page               : 5
-#   permalink              : '/page/:num/'
-#   sort_field             : 'last_modified_at'
-#   sort_reverse           : true
-#   category               : 'posts'
-#   trail                  : 
-#     before               : 2
-#     after                : 2
+#paginate                 : 10
+#paginate_path            : /page/:num/
+pagination               :
+  enabled                : true
+  per_page               : 10
+  permalink              : '/page/:num/'
+  sort_field             : 'last_modified_at'
+  sort_reverse           : true
+  category               : 'posts'
+  trail                  :
+    before               : 2
+    after                : 2
+theme_mode               : dark
+
 
 comments:
   provider               : "utterances" # false (default), "disqus", "discourse", "facebook", "staticman_v2", "staticman", "utterances", "giscus", "custom"
